Menus - Trying to fix block margin issue on mobile

--- a/src/components/pages/home/Menus.module.css
+++ b/src/components/pages/home/Menus.module.css
@@ -9,15 +9,15 @@
 }
 
 .title {
-	padding-top: 3rem;
+	/* padding-top: 3rem; */
 	margin-bottom: 8rem;
 }
 
 .title h2 {
 	font-family: var(--ff-halimun);
 	color: var(--heading-primary);
-	font-size: clamp(2rem, 6vw, 3rem);
-	font-weight: var(--fw-regular);
+	font-size: clamp(2rem, 6vw, 4rem);
+	font-weight: var(--fw-bold);
 }
 
 .menuBoxes {
@@ -35,23 +35,23 @@
 
 /* Media Queries */
 @media screen and (max-width: 768px) {
+	.menuSection {
+		padding: 8rem 0;
+	}
 	.menuBoxes {
 		flex-direction: column;
 		gap: 6rem;
+		width: 100%;
+		align-items: center;
+	}
 
-		.menuBoxes {
-			width: 100%;
-			align-items: center;
-		}
-
-		.menuBox {
-			width: 100%;
-		}
+	.menuBox {
+		width: 100%;
 	}
 }
 
 @media screen and (max-width: 520px) {
 	.title {
-		padding: 0;
+		margin-bottom: 4rem;
 	}
 }
